[package]
name = "pr-conflict-resolver"
version = "0.1.7"
edition = "2021"
description = "A tool to efficiently manage and repost GitHub Pull Requests"
authors = ["Sayo hi@sayo.wtf"]
license = "MIT"
repository = "https://github.com/wtfsayo/pr-conflict-resolver"
readme = "README.md"
keywords = ["github", "pull-request", "cli", "git"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "pr-resolver"
path = "src/main.rs"

[dependencies]